--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </p>
                 </div>
                 <div class="mt-12 sm:mt-16 lg:mt-0">
-                    <div class="pl-4 !m-0 -mr-12 sm:pl-6 md:-mr-16 lg:px-0 lg:m-0 lg:relative lg:h-full">
+                    <div class="pl-4 -mr-12 sm:pl-6 md:-mr-16 lg:px-0 lg:m-0 lg:relative lg:h-full">
                         <div class="ring-4 ring-[#fdb318ff] bg-[#096309] rounded-2xl p-3 lg:absolute lg:left-0">
                             <img class="w-full shadow-xl ring-2 ring-[#fdb318ff] rounded-xl lg:h-[30rem] lg:w-auto lg:max-w-none"
                                 src="./juriansyah_siluete.png" alt="Inbox user interface">
