--- a/index.html
+++ b/index.html
@@ -1,39 +1,15 @@
 <html lang="en" class="scroll-smooth selection:bg-blue-500 selection:text-white">
 <head>
-    <title>Landing 01</title>
-
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Your site description goes here">
-    <link rel="canonical" href="https://www.lexingtonthemes.com/">
-    <meta property="og:title" content="Open Graph Title">
-    <meta property="og:description" content="Open Graph Description">
-    <meta property="og:url" content="https://www.lexingtonthemes.com/">
-    <meta property="og:image" content="../lexingtonthemes.com/opengraph/social-og.html">
-    <meta property="og:image:alt" content="Social open graph">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:image" content="../lexingtonthemes.com/opengraph/twitter-og.html">
-    <meta property="og:image:alt" content="Twitter open graph">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="4096">
-    <meta property="og:image:height" content="4096">
-    <meta property="og:image" content="../lexingtonthemes.com/opengraph/social-og.html">
-    <meta property="og:image" content="../lexingtonthemes.com/opengraph/twitter-og.html">
-
-    <meta property="og:site_name" content="YourSitesName">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@site">
-    <meta name="twitter:creator" content="@TwitterHandle">
+    <title>Juriansyah</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta charset="UTF-8">
+    <meta name="description" content="Profile CALEG DPRRD Dapil Kubu Raya - Mempawah, Juriansyah">
+    <link rel="canonical" href="https://www.juriansyah.miftahdprri2024.com/">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Michael Andreuzza">
-    <meta name="your keywords"
-        content="wallpaper,black wallpaper, gradient wallpaper,aesthetic wallpaper,iphone wallpaper,wallpaper iphone,white wallpaper,pink wallpaper">
+    <meta name="author" content="Herdi Ehza">
+    <meta name="your keywords" content="dprd,kubu raya, mempawah, pemilu 2024, partai ppp">
     <!-- Favicon guidelines generated with https://realfavicongenerator.net/ -->
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
