--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <div class="lg:mx-auto lg:max-w-7xl lg:grid lg:grid-cols-2 lg:grid-flow-col-dense lg:gap-24">
                 <div class="lg:pr-24 md:pr-12">
                     <h2 class="inline-flex items-center text-blue-600">
-                        <span class="text-base font-medium tracking-tight">Nomor 17</span>
+                        <span class="text-base font-medium tracking-tight">Nomor urut 8</span>
                     </h2>
                     <h2 class="text-green-900 font-semibold mt-6 text-6xl md:text-8xl tracking-tighter">
                         Juriansyah
                     </h2>
                     <p class="text-slate-500 mt-5 text-base md:text-2xl">
-                        Calong Legislatif DPRD Provinsi KALBAR
+                        Calon Legislatif DPRD Provinsi KALBAR
                     </p>
                     <p class="text-slate-500 mt-1 text-base md:text-2xl">
                         DAPIL Kubu Raya - Mempawah
